fix(Field): update disabled color on iOS (#4508)

--- a/src/field/index.less
+++ b/src/field/index.less
@@ -38,6 +38,7 @@
 
     &:disabled {
       color: @field-input-disabled-text-color;
+      -webkit-text-fill-color: @field-input-disabled-text-color;
       background-color: transparent;
       opacity: 1;
     }
